--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <!-- 注册 -->
     <string name="forget_password">忘记密码</string>
     <string name="regist_nicheng">输入昵称</string>
+    <string name="regist_phone">输入手机号</string>
     <string name="regist_yanzhengma">验证码</string>
     <string name="regist_getyanzhengma">获取验证码</string>
     <string name="reget_sms_code_countdown">重新发送(%s)</string>
@@ -105,5 +106,7 @@
 
     <!--   公共   -->
     <string name="sorry_network_is_not_good">网络状况不佳</string>
+    <string name="my_app_name">MY漫吧</string>
+    <string name="my_app_desc">二次元同好聚集地</string>
 
 </resources>
