--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,11 @@
     <string name="setting_update_version">版本更新</string>
     <string name="setting_about_us">关于漫吧</string>
     <string name="setting_exit">退出登录</string>
+    <string name="setting_user_info">个人资料</string>
+    <string name="setting_user_nickname">昵称</string>
+    <string name="setting_user_sex">性别</string>
+    <string name="setting_user_brithday">生日</string>
+    <string name="setting_user_sign">个性签名</string>
 
     <!--   发布动态   -->
     <string name="fabu_title_hint">帖子标题（可选）</string>
