--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="setting_user_nickname">昵称</string>
     <string name="setting_user_sex">性别</string>
     <string name="setting_user_brithday">生日</string>
+    <string name="setting_user_notset">未设置</string>
     <string name="setting_user_sign">个性签名</string>
 
     <!--   发布动态   -->
@@ -127,5 +128,7 @@
     <string name="my_app_desc">二次元同好聚集地</string>
     <string name="loading">正在加载中...</string>
     <string name="no_more">没有更多数据了</string>
+    <string name="cancel">取消</string>
+    <string name="ok">确定</string>
 
 </resources>
