--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,9 @@
 
     <!--  动态详情界面   -->
     <string name="detail_title">动态详情</string>
+    <string name="detail_right">分享</string>
+    <string name="detail_send">发送</string>
+    <string name="detail_send_hint">说点什么...</string>
 
     <!--  查看图片界面   -->
     <string name="image_sendto_friend">发送给好友</string>
@@ -108,12 +111,15 @@
     <string name="setting_update_version">版本更新</string>
     <string name="setting_about_us">关于漫吧</string>
     <string name="setting_exit">退出登录</string>
+    <!-- 个人资料  -->
     <string name="setting_user_info">个人资料</string>
     <string name="setting_user_nickname">昵称</string>
     <string name="setting_user_sex">性别</string>
     <string name="setting_user_brithday">生日</string>
     <string name="setting_user_notset">未设置</string>
     <string name="setting_user_sign">个性签名</string>
+    <string name="setting_input_hint">请输入昵称</string>
+    <string name="setting_save">保存</string>
 
     <!--   发布动态   -->
     <string name="fabu_title_hint">帖子标题（可选）</string>
@@ -121,6 +127,7 @@
     <string name="fabu_dongtai">发帖</string>
     <string name="fabu_gonghui">发往专区（必选）</string>
     <string name="loading_up">正在发布...</string>
+    <string name="fabu_publish">发布</string>
 
     <!--   公共   -->
     <string name="sorry_network_is_not_good">网络状况不佳</string>
