--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,8 @@
     <string name="detail_right">分享</string>
     <string name="detail_send">发送</string>
     <string name="detail_send_hint">说点什么...</string>
+    <string name="comment_floor">%s楼</string>
+    <string name="comment_number">全部评论（%s）</string>
 
     <!--  查看图片界面   -->
     <string name="image_sendto_friend">发送给好友</string>
