--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="comment_sort_hot">热门评论</string>
     <string name="comment_sort_normal">回复</string>
     <string name="comment_pub">评论</string>
+    <string name="detail_upvote_list">点赞列表</string>
 
 
 
