--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- 登陆 -->
+    <!-- 登录 -->
     <string name="app_name">漫吧</string>
-    <string name="login">登陆</string>
+    <string name="login">登录</string>
     <string name="reset">重置密码</string>
     <string name="regist">注册</string>
     <string name="regist_now">马上注册 ></string>
@@ -11,11 +11,11 @@
     <string name="login_pwd">请输入6-16位数字密码</string>
     <string name="login_forget_pwd">忘记密码？</string>
     <string name="login_reset_pwd">重置密码</string>
-    <string name="login_thrid">其他登陆方式</string>
+    <string name="login_thrid">其他登录方式</string>
     <string name="login_weixin">微信</string>
     <string name="login_qq">QQ</string>
     <string name="login_xinlang">微博</string>
-    <string name="login_resetpwd_success">已成功修改密码，请重新登陆</string>
+    <string name="login_resetpwd_success">已成功修改密码，请重新登录</string>
 
     <!-- 注册 -->
     <string name="forget_password">忘记密码</string>
@@ -27,7 +27,7 @@
     <string name="regist_mima">设置密码：6-16位字母数字组合</string>
     <string name="regist_man">男</string>
     <string name="regist_woman">女</string>
-    <string name="regist_lingyu">锁定自己的领域</string>
+    <string name="regist_lingyu">兴趣</string>
     <string name="regist_dongman">动漫</string>
     <string name="regist_manhua">漫画</string>
     <string name="regist_youxi">游戏</string>
@@ -39,14 +39,14 @@
     <string name="regist_welcome">欢迎来到漫吧</string>
     <string name="regist_binding_phone">请绑定手机号</string>
 
-    <string name="home">主页</string>
+    <string name="home">首页</string>
     <string name="home_jiequ">街区</string>
     <string name="home_xiaoxi">消息</string>
     <string name="home_favorite">收藏</string>
     <string name="home_fayan">发言</string>
     <!--<string name="home_gonghui">公会</string>-->
     <string name="home_gonghui">专区</string>
-    <string name="home_jia">家</string>
+    <string name="home_jia">我</string>
 
     <string name="home_xinxian">新鲜</string>
     <string name="home_remen">热门</string>
@@ -101,7 +101,7 @@
     <string name="comment_floor">%s楼</string>
     <string name="comment_number">全部评论（%s）</string>
     <string name="comment_empty">暂无评论，抢占沙发！</string>
-    <string name="comment_detail_num">第%s楼</string>
+    <string name="comment_detail_title">评论详情</string>
     <string name="comment_more_reply">%s回复</string>
     <string name="comment_sort_zheng">正序查看</string>
     <string name="comment_sort_dao">倒序查看</string>
@@ -141,6 +141,7 @@
     <string name="setting_update_version">版本更新</string>
     <string name="setting_about_us">关于漫吧</string>
     <string name="setting_exit">退出登录</string>
+    <string name="setting_app_version">V%s</string>
     <string name="setting_clear_cache_ornot">确定清除缓存吗？</string>
 
     <!-- 个人资料  -->
@@ -156,7 +157,7 @@
 
     <!--   发布动态   -->
     <string name="fabu_title_hint">帖子标题（可选）</string>
-    <string name="fabu_content_hint">请输入内容</string>
+    <string name="fabu_content_hint">请输入发布内容</string>
     <string name="fabu_dongtai">发帖</string>
     <string name="fabu_gonghui">发往专区（必选）</string>
     <string name="loading_up">正在发布...</string>
